--- a/theme/date-picker.css
+++ b/theme/date-picker.css
@@ -105,7 +105,7 @@
     color: #ddd;
 }
 .el-date-table td.today {
-    color: #c1b087;
+    color: #575049;
 }
 .el-date-table td.available:hover {
     background-color: #e5e9f2;
@@ -117,7 +117,7 @@
     background-color: #AFDCFF;
 }
 .el-date-table td.current, .el-date-table td.start-date, .el-date-table td.end-date {
-    background-color: #c1b087 !important;
+    background-color: #575049 !important;
     color: #fff;
 }
 .el-date-table td.disabled {
@@ -245,7 +245,7 @@
     height: 32px;
     display: block;
     line-height: 32px;
-    color: #3c372f;
+    color: #c1b087;
 }
 .el-month-table td .cell:hover {
     background-color: #e5e9f2;
@@ -256,7 +256,7 @@
     color: #ccc;
 }
 .el-month-table td.current .cell {
-    background-color: #c1b087 !important;
+    background-color: #575049 !important;
     color: #fff;
 }
 :root {
@@ -365,7 +365,7 @@
     height: 32px;
     display: block;
     line-height: 32px;
-    color: #3c372f;
+    color: #c1b087;
 }
 .el-year-table td .cell:hover {
     background-color: #e5e9f2;
@@ -376,7 +376,7 @@
     color: #ccc;
 }
 .el-year-table td.current .cell {
-    background-color: #c1b087 !important;
+    background-color: #575049 !important;
     color: #fff;
 }
 :root {
@@ -927,7 +927,7 @@
   --------------------------*/
 }
 .el-picker-panel {
-    color: #3c372f;
+    color: #c1b087;
     border: 1px solid #D3DCE6;
     box-shadow: 0 2px 6px #ccc;
     background: #fff;
@@ -959,7 +959,7 @@
     background-color: transparent;
     line-height: 28px;
     font-size: 14px;
-    color: #3c372f;
+    color: #c1b087;
     padding-left: 12px;
     text-align: left;
     outline: none;
@@ -970,7 +970,7 @@
 }
 .el-picker-panel__shortcut.active {
     background-color: #e6f1fe;
-    color: #c1b087;
+    color: #575049;
 }
 .el-picker-panel__btn {
     border: 1px solid #dcdcdc;
@@ -997,11 +997,11 @@
     margin-top: 3px;
 }
 .el-picker-panel__icon-btn:hover {
-    color: #c1b087;
+    color: #575049;
 }
 .el-picker-panel__link-btn {
     cursor: pointer;
-    color: #c1b087;
+    color: #575049;
     text-decoration: none;
     padding: 15px;
     font-size: 12px;
@@ -1064,10 +1064,10 @@
     cursor: pointer;
 }
 .el-date-picker__header-label:hover {
-    color: #c1b087;
+    color: #575049;
 }
 .el-date-picker__header-label.active {
-    color: #c1b087;
+    color: #575049;
 }
 .el-date-picker__prev-btn {
     float: left;
