--- a/theme/message.css
+++ b/theme/message.css
@@ -112,7 +112,7 @@
 }
 
 .el-message .el-icon-information{
-    color: #9c743c;
+    color: #864c00;
 }
 
 .el-message .el-icon-warning{
@@ -158,7 +158,7 @@
     right: 0;
     position: absolute;
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
     font-size: 14px;
 }
 
