--- a/theme/option.css
+++ b/theme/option.css
@@ -97,7 +97,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: #3c372f;
+    color: #c1b087;
     height: 36px;
     line-height: 1.5;
     box-sizing: border-box;
@@ -110,11 +110,11 @@
 
 .el-select-dropdown__item.selected{
     color: #fff;
-    background-color: #c1b087
+    background-color: #575049
 }
 
 .el-select-dropdown__item.selected.hover{
-    background-color: #c1b087
+    background-color: #6d645c
 }
 
 .el-select-dropdown__item span{
@@ -122,7 +122,7 @@
 }
 
 .el-select-dropdown__item.is-disabled{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
     cursor: not-allowed
 }
 
