--- a/theme/progress.css
+++ b/theme/progress.css
@@ -186,7 +186,7 @@
   top: 0;
   height: 100%;
   border-radius: 2px 0 0 2px;
-  background-color:#c1b087;
+  background-color:#575049;
   text-align: right;
   border-radius: 100px;
   line-height: 1;
