--- a/theme/select-dropdown.css
+++ b/theme/select-dropdown.css
@@ -106,7 +106,7 @@
 .el-select-dropdown.is-multiple{}
 
 .el-select-dropdown.is-multiple .el-select-dropdown__item.selected{
-    color: #c1b087;
+    color: #575049;
     background-color: #fff;
 }
 
