--- a/element-variables.css
+++ b/element-variables.css
@@ -11,34 +11,34 @@
 
   /* Colors
   -------------------------- */
-  --color-primary: #c1b087;
+  --color-primary: #575049;
   --color-success: #13ce66;
   --color-warning: #f7ba2a;
   --color-danger: #ff4949;
-  --color-info: #9c743c;
-  --color-blue: #9c743c;
-  --color-blue-light: #c1b087;
-  --color-blue-lighter: rgba(var(--color-blue), 0.12);
+  --color-info: #864c00;
+  --color-brown: #864c00;
+  --color-brown-light: #6d645c;
+  --color-brown-lighter: rgba(var(--color-brown), 0.12);
   --color-white: #fff;
   --color-black: #000;
-  --color-grey: rgba(0, 0, 0, 0.2);
+  --color-grey: #7f7f7f;
 
   /* Link
   -------------------------- */
-  --link-color: #3c372f;
+  --link-color: #c1b087;
   --link-hover-color: var(--color-primary);
 
   /* Border
   -------------------------- */
   --border-width-base: 1px;
   --border-style-base: solid;
-  --border-color-base: var(--color-grey);
+  --border-color-base: #d3d3d3;
   --border-color-hover: #8492a6;
   --border-base: var(--border-width-base) var(--border-style-base) var(--border-color-base);
   --border-radius-base: 4px;
   --border-radius-small: 2px;
   --border-radius-circle: 100%;
-  --shadow-base: 0 0 2px rgba(var(--color-black), 0.18), 0 0 1px var(--color-blue-light);
+  --shadow-base: 0 0 2px rgba(var(--color-black), 0.18), 0 0 1px var(--color-brown-light);
 
   /* Box-shadow
   -------------------------- */
@@ -95,7 +95,7 @@
   --checkbox-disabled-checked-input-border-color: var(--disabled-border-base);
   --checkbox-disabled-checked-icon-color: var(--color-white);
 
-  --checkbox-checked-input-border-color: var(--color-blue);
+  --checkbox-checked-input-border-color: var(--color-brown);
   --checkbox-checked-input-fill: var(--color-primary);
   --checkbox-checked-icon-color: var(--fill-base);
 
@@ -152,7 +152,7 @@
   --select-option-height: 36px;
   --select-option-hover-background: #e5e9f2;
   --select-option-selected: var(--color-primary);
-  --select-option-selected-hover: #c1b087;
+  --select-option-selected-hover: #6d645c;
 
   --select-group-color: #999;
   --select-group-height: 30px;
@@ -276,8 +276,8 @@
   --cascader-menu-border-color: var(--border-color-base);
   --cascader-menu-border-width: var(--border-width-base);
   --cascader-menu-color: var(--font-color-base);
-  --cascader-menu-option-color-active: var(--color-blue);
-  --cascader-menu-option-fill-active: rgba(var(--color-blue), 0.12);
+  --cascader-menu-option-color-active: var(--color-brown);
+  --cascader-menu-option-fill-active: rgba(var(--color-brown), 0.12);
   --cascader-menu-option-color-hover: var(--font-color-base);
   --cascader-menu-option-fill-hover: rgba(var(--color-black), 0.06);
   --cascader-menu-option-color-disabled: #999;
@@ -301,14 +301,14 @@
   -------------------------- */
   --tab-font-size: var(--font-size-base);
   --tab-border-line: 1px solid #e4e4e4;
-  --tab-header-color-active: var(--color-blue);
+  --tab-header-color-active: var(--color-brown);
   --tab-header-color-hover: var(--font-color-base);
   --tab-header-color: var(--font-color-base);
   --tab-header-fill-active: rgba(var(--color-black), 0.06);
   --tab-header-fill-hover: rgba(var(--color-black), 0.06);
   --tab-vertical-header-width: 90px;
   --tab-vertical-header-count-color: var(--color-white);
-  --tab-vertical-header-count-fill: var(--color-blue);
+  --tab-vertical-header-count-fill: var(--color-brown);
   --tab-horizontal-border: 2px solid #438de0;
 
   /* Button
@@ -386,8 +386,8 @@
 
   /* Dialog
  -------------------------- */
-  --dialog-background-color: var(--color-blue);
-  --dialog-footer-background: var(--color-blue-lighter);
+  --dialog-background-color: var(--color-brown);
+  --dialog-footer-background: var(--color-brown-lighter);
   --dialog-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   --dialog-tiny-width: 30%;
   --dialog-small-width: 50%;
@@ -401,7 +401,7 @@
  -------------------------- */
   --table-border-color: #e0e6ed;
   --table-text-color: #1f2d3d;
-  --table-header-background: #c1b087;
+  --table-header-background: #f3f3f3;
 
   /* Pagination
  -------------------------- */
@@ -509,8 +509,8 @@
   /* Steps
   --------------------------*/
   --menu-item-color: var(--link-color);
-  --menu-item-fill: #c1b087;
-  --menu-item-hover-fill: #c1b087;
+  --menu-item-fill: #575049;
+  --menu-item-hover-fill: #6d645c;
   --submenu-item-fill: #f5f5f5;
 
   --dark-menu-item-color: var(--link-color);
