--- a/src/mixins.less
+++ b/src/mixins.less
@@ -1,9 +1,12 @@
-@primary-color: #c1b087;
-@primary-dark-color: #9c743c;
-@brown-color: #3c372f;
-@text-color: rgba(0, 0, 0, 0.7);
-@text-second-color: rgba(0, 0, 0, 0.5);
-@text-third-color: rgba(0, 0, 0, 0.3);
+@primary-color: #575049;
+@primary-hover-color: #6d645c;
+@primary-selected-color: #463d34;
+@primary-dark-color: #463d34;
+@brown-color: #864c00;
+@brown-color-light: #c1b087;
+@text-color: #000;
+@text-second-color: #7f7f7f;
+@text-third-color: #b2b2b2;
 @divider-dark-color: rgba(0, 0, 0, 0.2);
 @divider-white-color: rgba(255, 255, 255, 0.2);
 @background-gray: #f5f5f5;
