--- a/theme/button.css
+++ b/theme/button.css
@@ -94,7 +94,7 @@
     white-space: nowrap;
     cursor: pointer;
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
     -webkit-appearance: none;
     text-align: center;
@@ -114,13 +114,13 @@
 }
 
 .el-button:hover, .el-button:focus{
-    color: #c1b087;
-    border-color: #c1b087;
+    color: #575049;
+    border-color: #575049;
 }
 
 .el-button:active{
-    color: rgb(174, 158, 122);
-    border-color: rgb(174, 158, 122);
+    color: rgb(78, 72, 66);
+    border-color: rgb(78, 72, 66);
     outline: none;
 }
 
@@ -154,7 +154,7 @@
 .el-button.is-disabled{}
 
 .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
     cursor: not-allowed;
     background-image: none;
     background-color: #EFF2F7;
@@ -174,66 +174,66 @@
 }
 
 .el-button.is-active{
-    color: rgb(174, 158, 122);
-    border-color: rgb(174, 158, 122);
+    color: rgb(78, 72, 66);
+    border-color: rgb(78, 72, 66);
 }
 
 .el-button.is-plain{}
 
 .el-button.is-plain:hover, .el-button.is-plain:focus{
     background: #fff;
-    border-color: #c1b087;
-    color: #c1b087;
+    border-color: #575049;
+    color: #575049;
 }
 
 .el-button.is-plain:active{
     background: #fff;
-    border-color: rgb(174, 158, 122);
-    color: rgb(174, 158, 122);
+    border-color: rgb(78, 72, 66);
+    color: rgb(78, 72, 66);
     outline: none;
 }
 
 .el-button--primary{
     color: #fff;
-    background-color: #c1b087;
-    border-color: #c1b087;
+    background-color: #575049;
+    border-color: #575049;
 }
 
 .el-button--primary:hover, .el-button--primary:focus{
-    background: rgb(205, 192, 159);
-    border-color: rgb(205, 192, 159);
+    background: rgb(121, 115, 109);
+    border-color: rgb(121, 115, 109);
     color: #fff;
 }
 
 .el-button--primary:active{
-    background: rgb(174, 158, 122);
-    border-color: rgb(174, 158, 122);
+    background: rgb(78, 72, 66);
+    border-color: rgb(78, 72, 66);
     color: #fff;
     outline: none;
 }
 
 .el-button--primary.is-active{
-    background: rgb(174, 158, 122);
-    border-color: rgb(174, 158, 122);
+    background: rgb(78, 72, 66);
+    border-color: rgb(78, 72, 66);
     color: #fff;
 }
 
 .el-button--primary.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 
 .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus{
     background: #fff;
-    border-color: #c1b087;
-    color: #c1b087;
+    border-color: #575049;
+    color: #575049;
 }
 
 .el-button--primary.is-plain:active{
     background: #fff;
-    border-color: rgb(174, 158, 122);
-    color: rgb(174, 158, 122);
+    border-color: rgb(78, 72, 66);
+    color: rgb(78, 72, 66);
     outline: none;
 }
 
@@ -264,7 +264,7 @@
 
 .el-button--success.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 
@@ -308,7 +308,7 @@
 
 .el-button--warning.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 
@@ -352,7 +352,7 @@
 
 .el-button--danger.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 
@@ -371,45 +371,45 @@
 
 .el-button--info{
     color: #fff;
-    background-color: #9c743c;
-    border-color: #9c743c;
+    background-color: #864c00;
+    border-color: #864c00;
 }
 
 .el-button--info:hover, .el-button--info:focus{
-    background: rgb(176, 144, 99);
-    border-color: rgb(176, 144, 99);
+    background: rgb(158, 112, 51);
+    border-color: rgb(158, 112, 51);
     color: #fff;
 }
 
 .el-button--info:active{
-    background: rgb(140, 104, 54);
-    border-color: rgb(140, 104, 54);
+    background: rgb(121, 68, 0);
+    border-color: rgb(121, 68, 0);
     color: #fff;
     outline: none;
 }
 
 .el-button--info.is-active{
-    background: rgb(140, 104, 54);
-    border-color: rgb(140, 104, 54);
+    background: rgb(121, 68, 0);
+    border-color: rgb(121, 68, 0);
     color: #fff;
 }
 
 .el-button--info.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus{
     background: #fff;
-    border-color: #9c743c;
-    color: #9c743c;
+    border-color: #864c00;
+    color: #864c00;
 }
 
 .el-button--info.is-plain:active{
     background: #fff;
-    border-color: rgb(140, 104, 54);
-    color: rgb(140, 104, 54);
+    border-color: rgb(121, 68, 0);
+    color: rgb(121, 68, 0);
     outline: none;
 }
 
@@ -433,18 +433,18 @@
 
 .el-button--text{
     border: none;
-    color: #c1b087;
+    color: #575049;
     background: transparent;
     padding-left: 0;
     padding-right: 0;
 }
 
 .el-button--text:hover, .el-button--text:focus{
-    color: rgb(205, 192, 159);
+    color: rgb(121, 115, 109);
 }
 
 .el-button--text:active{
-    color: rgb(174, 158, 122);
+    color: rgb(78, 72, 66);
 }
 
 .el-button-group{
