--- a/theme/checkbox.css
+++ b/theme/checkbox.css
@@ -114,8 +114,8 @@
 }
 
 .el-checkbox__input.is-indeterminate .el-checkbox__inner{
-    background-color: #c1b087;
-    border-color: #9c743c
+    background-color: #575049;
+    border-color: #864c00
 }
 
 .el-checkbox__input.is-indeterminate .el-checkbox__inner::before{
@@ -134,12 +134,12 @@
 }
 
 .el-checkbox__input.is-focus .el-checkbox__inner{
-    border-color: #c1b087;
+    border-color: #575049;
 }
 
 .el-checkbox__input.is-checked .el-checkbox__inner{
-    background-color: #c1b087;
-    border-color: #9c743c
+    background-color: #575049;
+    border-color: #864c00
 }
 
 .el-checkbox__input.is-checked .el-checkbox__inner::after{
@@ -187,7 +187,7 @@
 .el-checkbox__inner{
     display: inline-block;
     position: relative;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     border-radius: 4px;
     box-sizing: border-box;
     width: 18px;
@@ -199,7 +199,7 @@
 }
 
 .el-checkbox__inner:hover{
-    border-color: #c1b087
+    border-color: #575049
 }
 
 .el-checkbox__inner::after{
