--- a/theme/dropdown.css
+++ b/theme/dropdown.css
@@ -188,7 +188,7 @@
     white-space: nowrap;
     cursor: pointer;
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
     -webkit-appearance: none;
     text-align: center;
@@ -206,12 +206,12 @@
     margin-left: 10px;
 }
 .el-button:hover, .el-button:focus{
-    color: #c1b087;
-    border-color: #c1b087;
+    color: #575049;
+    border-color: #575049;
 }
 .el-button:active{
-    color: rgb(174, 158, 122);
-    border-color: rgb(174, 158, 122);
+    color: rgb(78, 72, 66);
+    border-color: rgb(78, 72, 66);
     outline: none;
 }
 .el-button::-moz-focus-inner{
@@ -238,7 +238,7 @@
 }
 .el-button.is-disabled{}
 .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
     cursor: not-allowed;
     background-image: none;
     background-color: #EFF2F7;
@@ -254,56 +254,56 @@
     color: #C0CCDA;
 }
 .el-button.is-active{
-    color: rgb(174, 158, 122);
-    border-color: rgb(174, 158, 122);
+    color: rgb(78, 72, 66);
+    border-color: rgb(78, 72, 66);
 }
 .el-button.is-plain{}
 .el-button.is-plain:hover, .el-button.is-plain:focus{
     background: #fff;
-    border-color: #c1b087;
-    color: #c1b087;
+    border-color: #575049;
+    color: #575049;
 }
 .el-button.is-plain:active{
     background: #fff;
-    border-color: rgb(174, 158, 122);
-    color: rgb(174, 158, 122);
+    border-color: rgb(78, 72, 66);
+    color: rgb(78, 72, 66);
     outline: none;
 }
 .el-button--primary{
     color: #fff;
-    background-color: #c1b087;
-    border-color: #c1b087;
+    background-color: #575049;
+    border-color: #575049;
 }
 .el-button--primary:hover, .el-button--primary:focus{
-    background: rgb(205, 192, 159);
-    border-color: rgb(205, 192, 159);
+    background: rgb(121, 115, 109);
+    border-color: rgb(121, 115, 109);
     color: #fff;
 }
 .el-button--primary:active{
-    background: rgb(174, 158, 122);
-    border-color: rgb(174, 158, 122);
+    background: rgb(78, 72, 66);
+    border-color: rgb(78, 72, 66);
     color: #fff;
     outline: none;
 }
 .el-button--primary.is-active{
-    background: rgb(174, 158, 122);
-    border-color: rgb(174, 158, 122);
+    background: rgb(78, 72, 66);
+    border-color: rgb(78, 72, 66);
     color: #fff;
 }
 .el-button--primary.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus{
     background: #fff;
-    border-color: #c1b087;
-    color: #c1b087;
+    border-color: #575049;
+    color: #575049;
 }
 .el-button--primary.is-plain:active{
     background: #fff;
-    border-color: rgb(174, 158, 122);
-    color: rgb(174, 158, 122);
+    border-color: rgb(78, 72, 66);
+    color: rgb(78, 72, 66);
     outline: none;
 }
 .el-button--success{
@@ -329,7 +329,7 @@
 }
 .el-button--success.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 .el-button--success.is-plain:hover, .el-button--success.is-plain:focus{
@@ -366,7 +366,7 @@
 }
 .el-button--warning.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 .el-button--warning.is-plain:hover, .el-button--warning.is-plain:focus{
@@ -403,7 +403,7 @@
 }
 .el-button--danger.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 .el-button--danger.is-plain:hover, .el-button--danger.is-plain:focus{
@@ -419,39 +419,39 @@
 }
 .el-button--info{
     color: #fff;
-    background-color: #9c743c;
-    border-color: #9c743c;
+    background-color: #864c00;
+    border-color: #864c00;
 }
 .el-button--info:hover, .el-button--info:focus{
-    background: rgb(176, 144, 99);
-    border-color: rgb(176, 144, 99);
+    background: rgb(158, 112, 51);
+    border-color: rgb(158, 112, 51);
     color: #fff;
 }
 .el-button--info:active{
-    background: rgb(140, 104, 54);
-    border-color: rgb(140, 104, 54);
+    background: rgb(121, 68, 0);
+    border-color: rgb(121, 68, 0);
     color: #fff;
     outline: none;
 }
 .el-button--info.is-active{
-    background: rgb(140, 104, 54);
-    border-color: rgb(140, 104, 54);
+    background: rgb(121, 68, 0);
+    border-color: rgb(121, 68, 0);
     color: #fff;
 }
 .el-button--info.is-plain{
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     color: #1F2D3D;
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus{
     background: #fff;
-    border-color: #9c743c;
-    color: #9c743c;
+    border-color: #864c00;
+    color: #864c00;
 }
 .el-button--info.is-plain:active{
     background: #fff;
-    border-color: rgb(140, 104, 54);
-    color: rgb(140, 104, 54);
+    border-color: rgb(121, 68, 0);
+    color: rgb(121, 68, 0);
     outline: none;
 }
 .el-button--large{
@@ -471,16 +471,16 @@
 }
 .el-button--text{
     border: none;
-    color: #c1b087;
+    color: #575049;
     background: transparent;
     padding-left: 0;
     padding-right: 0;
 }
 .el-button--text:hover, .el-button--text:focus{
-    color: rgb(205, 192, 159);
+    color: rgb(121, 115, 109);
 }
 .el-button--text:active{
-    color: rgb(174, 158, 122);
+    color: rgb(78, 72, 66);
 }
 .el-button-group{
     display: inline-block;
@@ -617,7 +617,7 @@
 
 .el-dropdown-menu__item:not(.is-disabled):hover{
     background-color: #f5f5f5;
-    color: #3c372f;
+    color: #c1b087;
 }
 
 .el-dropdown-menu__item.is-disabled{
