--- a/theme/input.css
+++ b/theme/input.css
@@ -103,24 +103,24 @@
 }
 
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-input.is-disabled .el-input__inner::-moz-placeholder{
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-input.is-disabled .el-input__inner::placeholder{
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-input.is-active .el-input__inner{
     outline: none;
-    border-color: #c1b087;
+    border-color: #575049;
 }
 
 .el-input__inner{
@@ -130,7 +130,7 @@
     background-color: #fff;
     background-image: none;
     border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     box-sizing: border-box;
     color: rgba(0, 0, 0, 0.7);
     display: block;
@@ -165,7 +165,7 @@
 
 .el-input__inner:focus{
     outline: none;
-    border-color: #c1b087
+    border-color: #575049
 }
 
 .el-input__icon{
@@ -175,7 +175,7 @@
     right: 0;
     top: 0;
     text-align: center;
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-input__icon:after{
@@ -232,7 +232,7 @@
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     border-radius: 4px;
     padding: 0 10px;
     width: 1%;
@@ -291,19 +291,19 @@
 }
 
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-textarea.is-disabled .el-textarea__inner::-moz-placeholder{
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-    color: rgba(0, 0, 0, 0.2)
+    color: #7f7f7f
 }
 
 .el-textarea__inner{
@@ -317,7 +317,7 @@
     color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     border-radius: 4px;
     transition: border-color .2s cubic-bezier(.645,.045,.355,1)
 }
@@ -344,5 +344,5 @@
 
 .el-textarea__inner:focus{
     outline: none;
-    border-color: #c1b087
+    border-color: #575049
 }
