--- a/theme/message-box.css
+++ b/theme/message-box.css
@@ -215,7 +215,7 @@
   white-space: nowrap;
   cursor: pointer;
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   color: #1F2D3D;
   -webkit-appearance: none;
   text-align: center;
@@ -233,12 +233,12 @@
   margin-left: 10px;
 }
 .el-button:hover, .el-button:focus{
-  color: #c1b087;
-  border-color: #c1b087;
+  color: #575049;
+  border-color: #575049;
 }
 .el-button:active{
-  color: rgb(174, 158, 122);
-  border-color: rgb(174, 158, 122);
+  color: rgb(78, 72, 66);
+  border-color: rgb(78, 72, 66);
   outline: none;
 }
 .el-button::-moz-focus-inner{
@@ -265,7 +265,7 @@
 }
 .el-button.is-disabled{}
 .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
   cursor: not-allowed;
   background-image: none;
   background-color: #EFF2F7;
@@ -281,56 +281,56 @@
   color: #C0CCDA;
 }
 .el-button.is-active{
-  color: rgb(174, 158, 122);
-  border-color: rgb(174, 158, 122);
+  color: rgb(78, 72, 66);
+  border-color: rgb(78, 72, 66);
 }
 .el-button.is-plain{}
 .el-button.is-plain:hover, .el-button.is-plain:focus{
   background: #fff;
-  border-color: #c1b087;
-  color: #c1b087;
+  border-color: #575049;
+  color: #575049;
 }
 .el-button.is-plain:active{
   background: #fff;
-  border-color: rgb(174, 158, 122);
-  color: rgb(174, 158, 122);
+  border-color: rgb(78, 72, 66);
+  color: rgb(78, 72, 66);
   outline: none;
 }
 .el-button--primary{
   color: #fff;
-  background-color: #c1b087;
-  border-color: #c1b087;
+  background-color: #575049;
+  border-color: #575049;
 }
 .el-button--primary:hover, .el-button--primary:focus{
-  background: rgb(205, 192, 159);
-  border-color: rgb(205, 192, 159);
+  background: rgb(121, 115, 109);
+  border-color: rgb(121, 115, 109);
   color: #fff;
 }
 .el-button--primary:active{
-  background: rgb(174, 158, 122);
-  border-color: rgb(174, 158, 122);
+  background: rgb(78, 72, 66);
+  border-color: rgb(78, 72, 66);
   color: #fff;
   outline: none;
 }
 .el-button--primary.is-active{
-  background: rgb(174, 158, 122);
-  border-color: rgb(174, 158, 122);
+  background: rgb(78, 72, 66);
+  border-color: rgb(78, 72, 66);
   color: #fff;
 }
 .el-button--primary.is-plain{
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   color: #1F2D3D;
 }
 .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus{
   background: #fff;
-  border-color: #c1b087;
-  color: #c1b087;
+  border-color: #575049;
+  color: #575049;
 }
 .el-button--primary.is-plain:active{
   background: #fff;
-  border-color: rgb(174, 158, 122);
-  color: rgb(174, 158, 122);
+  border-color: rgb(78, 72, 66);
+  color: rgb(78, 72, 66);
   outline: none;
 }
 .el-button--success{
@@ -356,7 +356,7 @@
 }
 .el-button--success.is-plain{
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   color: #1F2D3D;
 }
 .el-button--success.is-plain:hover, .el-button--success.is-plain:focus{
@@ -393,7 +393,7 @@
 }
 .el-button--warning.is-plain{
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   color: #1F2D3D;
 }
 .el-button--warning.is-plain:hover, .el-button--warning.is-plain:focus{
@@ -430,7 +430,7 @@
 }
 .el-button--danger.is-plain{
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   color: #1F2D3D;
 }
 .el-button--danger.is-plain:hover, .el-button--danger.is-plain:focus{
@@ -446,39 +446,39 @@
 }
 .el-button--info{
   color: #fff;
-  background-color: #9c743c;
-  border-color: #9c743c;
+  background-color: #864c00;
+  border-color: #864c00;
 }
 .el-button--info:hover, .el-button--info:focus{
-  background: rgb(176, 144, 99);
-  border-color: rgb(176, 144, 99);
+  background: rgb(158, 112, 51);
+  border-color: rgb(158, 112, 51);
   color: #fff;
 }
 .el-button--info:active{
-  background: rgb(140, 104, 54);
-  border-color: rgb(140, 104, 54);
+  background: rgb(121, 68, 0);
+  border-color: rgb(121, 68, 0);
   color: #fff;
   outline: none;
 }
 .el-button--info.is-active{
-  background: rgb(140, 104, 54);
-  border-color: rgb(140, 104, 54);
+  background: rgb(121, 68, 0);
+  border-color: rgb(121, 68, 0);
   color: #fff;
 }
 .el-button--info.is-plain{
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   color: #1F2D3D;
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus{
   background: #fff;
-  border-color: #9c743c;
-  color: #9c743c;
+  border-color: #864c00;
+  color: #864c00;
 }
 .el-button--info.is-plain:active{
   background: #fff;
-  border-color: rgb(140, 104, 54);
-  color: rgb(140, 104, 54);
+  border-color: rgb(121, 68, 0);
+  color: rgb(121, 68, 0);
   outline: none;
 }
 .el-button--large{
@@ -498,16 +498,16 @@
 }
 .el-button--text{
   border: none;
-  color: #c1b087;
+  color: #575049;
   background: transparent;
   padding-left: 0;
   padding-right: 0;
 }
 .el-button--text:hover, .el-button--text:focus{
-  color: rgb(205, 192, 159);
+  color: rgb(121, 115, 109);
 }
 .el-button--text:active{
-  color: rgb(174, 158, 122);
+  color: rgb(78, 72, 66);
 }
 .el-button-group{
   display: inline-block;
@@ -697,20 +697,20 @@
   cursor: not-allowed;
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-input.is-disabled .el-input__inner::-moz-placeholder{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-input.is-disabled .el-input__inner::placeholder{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-input.is-active .el-input__inner{
   outline: none;
-  border-color: #c1b087;
+  border-color: #575049;
 }
 .el-input__inner{
   -webkit-appearance: none;
@@ -719,7 +719,7 @@
   background-color: #fff;
   background-image: none;
   border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.7);
   display: block;
@@ -748,7 +748,7 @@
 }
 .el-input__inner:focus{
   outline: none;
-  border-color: #c1b087;
+  border-color: #575049;
 }
 .el-input__icon{
   position: absolute;
@@ -757,7 +757,7 @@
   right: 0;
   top: 0;
   text-align: center;
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-input__icon:after{
   content: '';
@@ -803,7 +803,7 @@
   vertical-align: middle;
   display: table-cell;
   position: relative;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   border-radius: 4px;
   padding: 0 10px;
   width: 1%;
@@ -852,16 +852,16 @@
   cursor: not-allowed;
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-textarea.is-disabled .el-textarea__inner::-moz-placeholder{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-  color: rgba(0, 0, 0, 0.2);
+  color: #7f7f7f;
 }
 .el-textarea__inner{
   display: block;
@@ -874,7 +874,7 @@
   color: rgba(0, 0, 0, 0.7);
   background-color: #fff;
   background-image: none;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #d3d3d3;
   border-radius: 4px;
   transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
@@ -895,7 +895,7 @@
 }
 .el-textarea__inner:focus{
   outline: none;
-  border-color: #c1b087;
+  border-color: #575049;
 }
 
 .el-message-box{
@@ -936,7 +936,7 @@
 
 .el-message-box__content{
   padding: 30px 20px;
-  color: #3c372f;
+  color: #c1b087;
   font-size: 14px;
   position: relative;
 }
@@ -953,7 +953,7 @@
 }
 
 .el-message-box__close:hover{
-  color: #c1b087;
+  color: #575049;
 }
 
 .el-message-box__input{
@@ -1019,7 +1019,7 @@
 }
 
 .el-message-box__status.el-icon-information{
-  color: #9c743c;
+  color: #864c00;
 }
 
 .el-message-box__status.el-icon-warning{
