--- a/theme/notification.css
+++ b/theme/notification.css
@@ -110,7 +110,7 @@
 }
 
 .el-notification .el-icon-information{
-    color: #9c743c;
+    color: #864c00;
 }
 
 .el-notification .el-icon-warning{
@@ -152,7 +152,7 @@
     right: 20px;
     position: absolute;
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
     font-size: 14px;
 }
 
