--- a/theme/slider.css
+++ b/theme/slider.css
@@ -108,20 +108,20 @@
     cursor: not-allowed;
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-input.is-disabled .el-input__inner::-moz-placeholder{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-input.is-disabled .el-input__inner::placeholder{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-input.is-active .el-input__inner{
     outline: none;
-    border-color: #c1b087;
+    border-color: #575049;
 }
 .el-input__inner{
     -webkit-appearance: none;
@@ -130,7 +130,7 @@
     background-color: #fff;
     background-image: none;
     border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     box-sizing: border-box;
     color: rgba(0, 0, 0, 0.7);
     display: block;
@@ -159,7 +159,7 @@
 }
 .el-input__inner:focus{
     outline: none;
-    border-color: #c1b087;
+    border-color: #575049;
 }
 .el-input__icon{
     position: absolute;
@@ -168,7 +168,7 @@
     right: 0;
     top: 0;
     text-align: center;
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-input__icon:after{
     content: '';
@@ -214,7 +214,7 @@
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     border-radius: 4px;
     padding: 0 10px;
     width: 1%;
@@ -263,16 +263,16 @@
     cursor: not-allowed;
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-textarea.is-disabled .el-textarea__inner::-moz-placeholder{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-    color: rgba(0, 0, 0, 0.2);
+    color: #7f7f7f;
 }
 .el-textarea__inner{
     display: block;
@@ -285,7 +285,7 @@
     color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #d3d3d3;
     border-radius: 4px;
     transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
@@ -306,7 +306,7 @@
 }
 .el-textarea__inner:focus{
     outline: none;
-    border-color: #c1b087;
+    border-color: #575049;
 }
 :root{
     /* Transition
@@ -422,7 +422,7 @@
 }
 .el-input-number__increase, .el-input-number__decrease{
     height: auto;
-    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    border-left: 1px solid #d3d3d3;
     width: 36px;
     line-height: 34px;
     top: 1px;
@@ -433,10 +433,10 @@
     z-index: 1;
 }
 .el-input-number__increase:hover, .el-input-number__decrease:hover{
-    color: #c1b087;
+    color: #575049;
 }
 .el-input-number__increase:hover:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled), .el-input-number__decrease:hover:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled){
-    border-color: #c1b087;
+    border-color: #575049;
 }
 .el-input-number__increase.is-disabled, .el-input-number__decrease.is-disabled{
     color: #D3DCE6;
@@ -796,7 +796,7 @@
 }
 
 .el-slider__runway.disabled .el-slider__bar, .el-slider__runway.disabled .el-slider__button{
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: #7f7f7f;
 }
 
 .el-slider__runway.disabled .el-slider__button-wrapper{}
@@ -830,7 +830,7 @@
 
 .el-slider__bar{
     height: 4px;
-    background-color: #c1b087;
+    background-color: #575049;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
     position: absolute;
@@ -882,7 +882,7 @@
 .el-slider__button{
     width: 12px;
     height: 12px;
-    background-color: #c1b087;
+    background-color: #575049;
     border-radius: 50%;
     transition: .2s;
     -webkit-user-select: none;
@@ -911,6 +911,6 @@
     width: 4px;
     height: 4px;
     border-radius: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: #7f7f7f;
     transform: translateX(-50%);
 }
