--- a/theme/tabs.css
+++ b/theme/tabs.css
@@ -109,7 +109,7 @@
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #c1b087;
+  background-color: #575049;
   z-index: 1;
   transition: transform .3s cubic-bezier(.645,.045,.355,1);
   list-style: none;
@@ -156,7 +156,7 @@
 }
 
 .el-tabs__item.is-active{
-  color: #c1b087;
+  color: #575049;
 }
 
 .el-tabs__content{
