修改pagination css；基本完成厂牌列表页

--- a/element-variables.css
+++ b/element-variables.css
@@ -407,7 +407,7 @@
  -------------------------- */
   --pagination-font-size: 13px;
   --pagination-fill: var(--color-white);
-  --pagination-color: var(--link-color);
+  --pagination-color: #000;
   --pagination-border-radius: 2px;
   --pagination-button-color: #99a9bf;
   --pagination-button-size: 28px;
