--- a/theme/index.css
+++ b/theme/index.css
@@ -7524,7 +7524,7 @@
 .el-pagination {
     white-space: nowrap;
     padding: 2px 5px;
-    color: #c1b087;
+    color: #000;
 }
 .el-pagination:before, .el-pagination:after {
     display: table;
