修改了breadcrumb样式

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -23,3 +23,7 @@ body {
 .fade-enter, .fade-leave-active {
   opacity: 0
 }
+
+.el-breadcrumb__item:last-child .el-breadcrumb__item__inner {
+  color: #000 !important;
+}
