添加了banner列表

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -27,3 +27,14 @@ body {
 .el-breadcrumb__item:last-child .el-breadcrumb__item__inner {
   color: #000 !important;
 }
+.panel-top {
+  position: relative;
+  padding: 0.5em 0;
+  .button-new {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: @primary-dark-color;
+    color: white;
+  }
+}
