新增了单张图片上传的控件；完成了banner的新建；去除了app.less的重复引用

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -1,6 +1,6 @@
 @import "mixins";
 #app {
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  font-family: PingFangSC-Regular, 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   //text-align: center;
@@ -10,6 +10,12 @@ body {
   padding: 0;
   margin: 0;
   background: @background-gray;
+}
+hr {
+  color: #d3d3d3;
+  border-color: #d3d3d3;
+  border-top: none;
+  margin-bottom: 20px;
 }
 .fade-enter-active, .fade-leave-active {
   transition-property: opacity;
@@ -39,9 +45,14 @@ body {
   }
 }
 
-.panel-edit-body {
-  padding: 2em;
+.edit-body {
+  padding: 20px;
+  background: white;
+  border-radius: 2px;
+  margin-bottom: 20px;
   .edit-header {
-    font-size: 26px;
+    font-size: 20px;
+    line-height: 28px;
+    color: #000;
   }
 }
